@@ -1,11 +1,13 @@
 AT_BANNER([OVSDB -- ovsdb-client commands])
 
-AT_SETUP([ovsdb-client get-schema-version])
+AT_SETUP([ovsdb-client get-schema-version and get-schema-cksum])
 AT_KEYWORDS([ovsdb client positive])
 ordinal_schema > schema
 AT_CHECK([ovsdb-tool create db schema], [0], [ignore], [ignore])
 AT_CHECK([ovsdb-server --detach --no-chdir --pidfile --remote=punix:socket db], [0], [ignore], [ignore])
 AT_CHECK([ovsdb-client get-schema-version unix:socket ordinals], [0], [5.1.3
+])
+AT_CHECK([ovsdb-client get-schema-cksum unix:socket ordinals], [0], [12345678 9
 ])
 OVSDB_SERVER_SHUTDOWN
 AT_CLEANUP
